docs: expand on prerequisities and dependencies in installation guide
resolves #25.

--- a/docs/1.installation.md
+++ b/docs/1.installation.md
@@ -4,31 +4,65 @@ LuaRadio can be installed from the Arch Linux AUR or from source.
 
 Packaging for other distributions and platforms is a work in progress.
 
+To try LuaRadio without installation, you can run it [directly from the
+repository](../README.md#quickstart), provided LuaJIT is installed. The
+real-time dependencies described [below](#install-real-time-dependencies) will
+also be necessary for real-time applications.
+
 ## Installing from Arch Linux AUR
 
 LuaRadio is available in the Arch Linux AUR under the package
 [`luaradio`](https://aur.archlinux.org/packages/luaradio).
 
+Desktop users should also install the `gnuplot` package for plotting support.
+
 ## Installing from Source
 
-Install LuaJIT. Most platforms have LuaJIT in their official package
-repositories.
+### Install prerequisites
+
+Install the prerequisite packages (LuaJIT 2.0.4 or greater):
+
+* Arch Linux: `luajit`
+* Ubuntu/Debian: `luajit`, `libluajit-5.1-dev`,`pkg-config`
+* Fedora, CentOS/RHEL/SL 7 or up: `luajit`, `luajit-devel`
+* Mac OS X (Homebrew): `luajit`, `pkg-config`
+
+### Install LuaRadio
 
 Build and install LuaRadio:
 
 ```
 git clone https://github.com/vsergeev/luaradio.git
 cd luaradio/embed
-make
+make lib
 sudo make install
 ```
 
+### Install real-time dependencies
+
 LuaRadio has no hard dependencies outside of LuaJIT, but for real-time
 applications, the [liquid-dsp](https://github.com/jgaeddert/liquid-dsp) or
-[VOLK](http://libvolk.org), and [fftw](http://www.fftw.org/) libraries are
-strongly encouraged for appreciable performance. These libraries may be
-available in your distribution's package repositories, or can be built from
-source.
+[VOLK](https://github.com/gnuradio/volk), and [fftw](http://www.fftw.org/)
+libraries are strongly encouraged for appreciable performance. VOLK depends on
+boost.
+
+* Arch Linux: `fftw`, `liquid-dsp-git` (AUR) or `libvolk`
+* Ubuntu/Debian: `fftw3`, `libfftw3-dev`, liquid-dsp or VOLK from source
+* Fedora, CentOS/RHEL/SL 7 or up: `fftw`, `fftw-devel`, liquid-dsp or VOLK from
+  source
+* Mac OS X (Homebrew): `fftw`, liquid-dsp or VOLK from source
+
+Run `sudo ldconfig` after library installation on Linux platforms, to update
+the shared library cache.
+
+### Install optional dependencies
+
+Desktop users should also install the `gnuplot` package for plotting support.
+
+Some I/O blocks, like SDR and audio sources/sinks, may require additional
+external libraries.
+
+### Check Installation
 
 Check the installation by dumping the platform information:
 
