docs: regenerate reference manual for v0.1.2

--- a/docs/0.reference-manual.md
+++ b/docs/0.reference-manual.md
@@ -1,6 +1,6 @@
 # LuaRadio Reference Manual
 
-Generated from LuaRadio `v0.1.1`.
+Generated from LuaRadio `v0.1.2`.
 
 ## Table of contents
 
@@ -1796,8 +1796,8 @@ rate for downstream blocks in the flow graph by a factor of M.
 $$ y[n] = x[nM] $$
 
 Note: this block performs no anti-alias filtering. Use the
-[`DecimatorBlock`](#decimatorblock) composite for signal decimation with
-anti-alias filtering.
+[`DecimatorBlock`](#decimatorblock) for signal decimation with anti-alias
+filtering.
 
 ##### `radio.DownsamplerBlock(factor)`
 
