docs: reword mac os x instructions in installation guide

--- a/docs/1.installation.md
+++ b/docs/1.installation.md
@@ -1,6 +1,7 @@
 # Installation
 
-LuaRadio can be installed from the Arch Linux AUR or from source.
+LuaRadio can be installed from the Arch Linux AUR, from Homebrew on Mac OS X,
+or from source.
 
 Packaging for other distributions and platforms is a work in progress.
 
@@ -16,17 +17,19 @@ LuaRadio is available in the Arch Linux AUR under the package
 
 Desktop users should also install the `gnuplot` package for plotting support.
 
-## Installing on Mac OS X with Homebrew
+## Installing from Homebrew on Mac OS X
 
-To install LuaRadio on Mac OS X, you can use [Homebrew](http://brew.sh/):
+LuaRadio is available in [Homebrew](http://brew.sh/) for Mac OS X:
 
 ```
 brew install luaradio
 ```
 
-*Note*: Currently the optional dependency liquid-dsp is not available, yet.
-Alternatively the package `gnuradio` can be installed (`brew install gnuradio`)
-additionally to make VOLK available.
+*Note*: Currently, the optional dependency liquid-dsp (used for real-time
+acceleration) is not yet available in Homebrew. liquid-dsp or VOLK can be
+installed [from source](#install-real-time-dependencies).
+
+Desktop users should also install the `gnuplot` package for plotting support.
 
 ## Installing from Source
 
