docs: improve wording in supported hardware document

--- a/docs/7.supported-hardware.md
+++ b/docs/7.supported-hardware.md
@@ -31,7 +31,7 @@ Coming soon:
 
 Sound card SDRs, like the [SoftRock](http://fivedash.com/) or
 [SignaLink](http://www.tigertronics.com/), source and sink analog I/Q signals
-through sound card stereo line-in and line-out interfaces.
+through stereo sound card interfaces.
 
 ### Sources
 
