docs: add ubuntu install instructions to installation guide
resolves #12.

--- a/docs/1.installation.md
+++ b/docs/1.installation.md
@@ -1,7 +1,7 @@
 # Installation
 
-LuaRadio can be installed from the Arch Linux AUR, from Homebrew on Mac OS X,
-or from source.
+LuaRadio can be installed from the AUR on Arch Linux, from a PPA on Ubuntu,
+from Homebrew on Mac OS X, or from source.
 
 Packaging for other distributions and platforms is a work in progress.
 
@@ -17,6 +17,26 @@ LuaRadio is available in the Arch Linux AUR under the package
 
 Desktop users should also install the `gnuplot` package for plotting support.
 
+## Installing on Ubuntu 16.04, 14.04
+
+LuaRadio is available through a PPA for Ubuntu 16.04 (Xenial Xerus) and Ubuntu
+14.04 (Trusty Tahr), under amd64, i386, and armhf architectures.
+
+```
+sudo apt-get install software-properties-common
+sudo add-apt-repository ppa:vsergeev/luaradio
+sudo apt-get update
+sudo apt-get install luaradio
+```
+
+*Note*: Users should install liquid-dsp or VOLK for real-time acceleration.
+liquid-dsp is not yet available in the PPA.  liquid-dsp or VOLK can be
+installed [from source](#install-real-time-dependencies). On Ubuntu 16.04, VOLK
+can be installed with the `libvolk1-dev` package.
+
+Desktop users should also install the `gnuplot5` or `gnuplot` package for
+plotting support.
+
 ## Installing from Homebrew on Mac OS X
 
 LuaRadio is available in [Homebrew](http://brew.sh/) for Mac OS X:
@@ -25,8 +45,8 @@ LuaRadio is available in [Homebrew](http://brew.sh/) for Mac OS X:
 brew install luaradio
 ```
 
-*Note*: Currently, the optional dependency liquid-dsp (used for real-time
-acceleration) is not yet available in Homebrew. liquid-dsp or VOLK can be
+*Note*: Users should install liquid-dsp or VOLK for real-time acceleration.
+liquid-dsp is not yet available in Homebrew. liquid-dsp or VOLK can be
 installed [from source](#install-real-time-dependencies).
 
 Desktop users should also install the `gnuplot` package for plotting support.
