docs: regenerate reference manual for v0.3.0

--- a/docs/0.reference-manual.md
+++ b/docs/0.reference-manual.md
@@ -1,6 +1,6 @@
 # LuaRadio Reference Manual
 
-Generated from LuaRadio `v0.2.0`.
+Generated from LuaRadio `v0.3.0`.
 
 ## Table of contents
 
@@ -62,6 +62,9 @@ Generated from LuaRadio `v0.2.0`.
         * [MultiplyConjugateBlock](#multiplyconjugateblock)
         * [MultiplyConstantBlock](#multiplyconstantblock)
         * [SubtractBlock](#subtractblock)
+    * [Level Control](#level-control)
+        * [AGCBlock](#agcblock)
+        * [PowerSquelchBlock](#powersquelchblock)
     * [Sample Rate Manipulation](#sample-rate-manipulation)
         * [DownsamplerBlock](#downsamplerblock)
         * [UpsamplerBlock](#upsamplerblock)
@@ -111,8 +114,10 @@ Generated from LuaRadio `v0.2.0`.
         * [RDSDecoderBlock.RDSPacketType](#rdsdecoderblockrdspackettype)
         * [RDSFramerBlock](#rdsframerblock)
         * [RDSFramerBlock.RDSFrameType](#rdsframerblockrdsframetype)
+        * [VaricodeDecoderBlock](#varicodedecoderblock)
     * [Receivers](#receivers)
         * [AX25Receiver](#ax25receiver)
+        * [BPSK31Receiver](#bpsk31receiver)
         * [POCSAGReceiver](#pocsagreceiver)
         * [RDSReceiver](#rdsreceiver)
 * [Infrastructure](#infrastructure)
@@ -433,7 +438,7 @@ libairspy library. The Airspy R2 and Airspy Mini dongles are supported.
 local src = radio.AirspySource(135e6, 6e6)
 
 -- Source samples from 91.1 MHz sampled at 3 MHz, with custom gain settings
-local src = radio.AirspySource(91.1e6, 3e6, {lna_gain = 4, mixer_gain = 1, vga_gain = 6})
+local src = radio.AirspySource(91.1e6, 3e6, {gain_mode = "custom", lna_gain = 4, mixer_gain = 1, vga_gain = 6})
 
 -- Source samples from 91.1 MHz sampled at 2.5 MHz, with linearity gain mode
 local src = radio.AirspySource(91.1e6, 2.5e6, {gain_mode = "linearity", linearity_gain = 8})
@@ -459,7 +464,7 @@ libhackrf library.
 * `rate` (*number*): Sample rate in Hz
 * `options` (*table*): Additional options, specifying:
     * `lna_gain` (int, default 8 dB, range 0 to 40 dB, 8 dB step)
-    * `vga_gain` (int, default 20 dB, range 0 to 62 dB, 2 dB step)
+    * `vga_gain` (int, default 40 dB, range 0 to 62 dB, 2 dB step)
     * `bandwidth` (number in Hz, default round down from sample rate)
     * `rf_amplifier_enable` (bool, default false)
     * `antenna_power_enable` (bool, default false)
@@ -1912,6 +1917,78 @@ top:connect(subtractor, snk)
 --------------------------------------------------------------------------------
 
 
+### Level Control
+
+#### AGCBlock
+
+Apply automatic gain to a real or complex valued signal to maintain an
+average target power.
+
+$$ y[n] = \text{AGC}(x[n], \text{mode}, \text{target}, \text{threshold}) $$
+
+Implementation note: this is a feedforward AGC. The `power_tau` time
+constant controls the moving average of the power estimator. The `gain_tau`
+time constant controls the speed of the gain adjustment. The gain has
+symmetric attack and decay dynamics.
+
+##### `radio.AGCBlock(mode[, target=-35, threshold=-75, options={}])`
+
+###### Arguments
+
+* `mode` (*string*): Mode, choice of "fast", "slow", "custom"
+* `target` (*number*): Target power in dBFS
+* `threshold` (*number*): Threshold power in dBFS
+* `options` (*table*): Additional options, specifying:
+    * `gain_tau` (number, default 0.1 seconds for
+                                  fast, 3.0 seconds for slow)
+    * `power_tau` (number, default 1.0 seconds)
+
+###### Type Signatures
+
+* `in` *Float32* ➔❑➔ `out` *Float32*
+* `in` *ComplexFloat32* ➔❑➔ `out` *ComplexFloat32*
+
+###### Example
+
+``` lua
+-- Automatic gain control with fast gain
+local agc = radio.AGCBlock('fast')
+
+-- Automatic gain control with slow gain, -20 dbFS target
+local agc = radio.AGCBlock('slow', -20)
+
+-- Automatic gain control with custom time constant, -30 dbFS target, -100 dbFS threshold
+local agc = radio.AGCBlock('custom', -30, -100, {gain_tau = 0.5})
+```
+--------------------------------------------------------------------------------
+
+#### PowerSquelchBlock
+
+Squelch a real or complex valued signal by its average power.
+
+$$ y[n] = \begin{cases} x[n] & \text{if } P_\text{average}(x[n]) > P_\text{threshold} \\ 0.0 & \text{otherwise} \end{cases} $$
+
+##### `radio.PowerSquelchBlock(threshold[, tau=0.001])`
+
+###### Arguments
+
+* `threshold` (*number*): Power threshold in dBFS
+* `tau` (*number*): Time constant of moving average filter in seconds
+
+###### Type Signatures
+
+* `in` *Float32* ➔❑➔ `out` *Float32*
+* `in` *ComplexFloat32* ➔❑➔ `out` *ComplexFloat32*
+
+###### Example
+
+``` lua
+-- Squelch at -40 dBFS power
+local squelch = radio.PowerSquelchBlock(-40)
+```
+--------------------------------------------------------------------------------
+
+
 ### Sample Rate Manipulation
 
 #### DownsamplerBlock
@@ -2982,6 +3059,23 @@ typedef struct {
 
 --------------------------------------------------------------------------------
 
+#### VaricodeDecoderBlock
+
+Decode a Varicode encoded bit stream into bytes.
+
+##### `radio.VaricodeDecoderBlock()`
+
+###### Type Signatures
+
+* `in` *Bit* ➔❑➔ `out` *Byte*
+
+###### Example
+
+``` lua
+local decoder = radio.VaricodeDecoderBlock()
+```
+--------------------------------------------------------------------------------
+
 
 ### Receivers
 
@@ -3001,6 +3095,26 @@ AFSK modulated complex-valued signal.
 ``` lua
 local receiver = radio.AX25Receiver()
 local snk = radio.JSONSink()
+top:connect(src, receiver, snk)
+```
+--------------------------------------------------------------------------------
+
+#### BPSK31Receiver
+
+Demodulate and decode bytes from a baseband BPSK31 modulated complex-valued
+signal.
+
+##### `radio.BPSK31Receiver()`
+
+###### Type Signatures
+
+* `in` *ComplexFloat32* ➔❑➔ `out` *Byte*
+
+###### Example
+
+``` lua
+local receiver = radio.BPSK31Receiver()
+local snk = radio.RawFileSink(io.stdout)
 top:connect(src, receiver, snk)
 ```
 --------------------------------------------------------------------------------
@@ -3062,7 +3176,7 @@ LuaRadio package.
 
 ##### `radio.version`
 
-*string*: Package version as a string, e.g." 1.0.0".
+*string*: Package version as a string, e.g. "1.0.0".
 
 --------------------------------------------------------------------------------
 
