docs: update supported hardware document

--- a/docs/7.supported-hardware.md
+++ b/docs/7.supported-hardware.md
@@ -3,10 +3,11 @@
 ## Hardware SDR Sources and Sinks
 
 Hardware SDRs source and sink digital I/Q samples through USB, PCI, or other
-high speed digital interfaces.
+high speed interfaces.
 
 ### Sources
 
+* [SoapySDR](https://github.com/pothosware/SoapySDR/wiki) with [`SoapySDRSource`](0.reference-manual.md#soapysdrsource) via [libSoapySDR](https://github.com/pothosware/SoapySDR)
 * [RTL-SDR](http://www.rtl-sdr.com/about-rtl-sdr/) with [`RtlSdrSource`](0.reference-manual.md#rtlsdrsource) via [librtlsdr](http://sdr.osmocom.org/trac/wiki/rtl-sdr)
 * [Airspy R2 and Mini](http://airspy.com/) with [`AirspySource`](0.reference-manual.md#airspysource) via [libairspy](https://github.com/airspy/host)
 * [HackRF One](https://greatscottgadgets.com/hackrf/) with [`HackRFSource`](0.reference-manual.md#hackrfsource) via [libhackrf](https://github.com/mossmann/hackrf)
@@ -14,32 +15,27 @@ high speed digital interfaces.
 
 Coming soon:
 
-* [SoapySDR modules](https://github.com/pothosware/SoapySDR/wiki) with `SoapySDRSource` via [libSoapySDR](https://github.com/pothosware/SoapySDR)
 * [BladeRF](http://nuand.com/) with [`BladeRFSource`](https://github.com/vsergeev/luaradio/issues/19) via [libbladerf](https://github.com/Nuand/bladeRF)
 
 ### Sinks
 
-None to date.
+* [SoapySDR](https://github.com/pothosware/SoapySDR/wiki) with [`SoapySDRSink`](0.reference-manual.md#soapysdrsink) via [libSoapySDR](https://github.com/pothosware/SoapySDR)
+* [HackRF One](https://greatscottgadgets.com/hackrf/) with [`HackRFSink`](0.reference-manual.md#hackrfsink) via [libhackrf](https://github.com/mossmann/hackrf)
 
 Coming soon:
 
-* [HackRF One](https://greatscottgadgets.com/hackrf/) with `HackRFSink` via [libhackrf](https://github.com/mossmann/hackrf)
-* [SoapySDR modules](https://github.com/pothosware/SoapySDR/wiki) with `SoapySDRSink` via [libSoapySDR](https://github.com/pothosware/SoapySDR)
 * [BladeRF](http://nuand.com/) with `BladeRFSink` via [libbladerf](https://github.com/Nuand/bladeRF)
 
 ## Sound card SDR Sources and Sinks
 
-Sound card SDRs, like the [SoftRock](http://fivedash.com/) or
-[SignaLink](http://www.tigertronics.com/), source and sink analog I/Q signals
-through stereo sound card interfaces.
+Sound card SDRs, like the [SoftRock](http://fivedash.com/), source and sink
+analog I/Q signals through sound card stereo channels. Transceiver "digimode"
+interfaces, like the [SignaLink](http://www.tigertronics.com/), source and sink
+demodulated audio signals through sound card mono channels.
 
 ### Sources
 
-None to date.
-
-Coming soon:
-
-* `PulseAudioSource` via [libpulse](https://freedesktop.org/software/pulseaudio/doxygen/)
+* [`PulseAudioSource`](0.reference-manual.md#pulseaudiosource) via [libpulse](https://freedesktop.org/software/pulseaudio/doxygen/)
 
 ### Sinks
 
@@ -48,9 +44,9 @@ Coming soon:
 
 ## File Sources and Sinks
 
-File sources and sinks can also indirectly support SDR hardware by reading or
-writing a named pipe, linked to an external utility that interfaces with the
-SDR hardware.
+File sources and sinks source and sink samples with ordinary files. They can
+indirectly support SDR hardware by reading or writing a named pipe, linked to
+an external utility that interfaces with the SDR hardware.
 
 ### Sources
 
