docs: regenerate reference manual for v0.4.0

--- a/docs/0.reference-manual.md
+++ b/docs/0.reference-manual.md
@@ -1,6 +1,6 @@
 # LuaRadio Reference Manual
 
-Generated from LuaRadio `v0.3.0`.
+Generated from LuaRadio `v0.4.0`.
 
 ## Table of contents
 
@@ -16,11 +16,13 @@ Generated from LuaRadio `v0.3.0`.
         * [HackRFSource](#hackrfsource)
         * [IQFileSource](#iqfilesource)
         * [NullSource](#nullsource)
+        * [PulseAudioSource](#pulseaudiosource)
         * [RawFileSource](#rawfilesource)
         * [RealFileSource](#realfilesource)
         * [RtlSdrSource](#rtlsdrsource)
         * [SDRplaySource](#sdrplaysource)
         * [SignalSource](#signalsource)
+        * [SoapySDRSource](#soapysdrsource)
         * [UniformRandomSource](#uniformrandomsource)
         * [WAVFileSource](#wavfilesource)
     * [Sinks](#sinks)
@@ -29,6 +31,7 @@ Generated from LuaRadio `v0.3.0`.
         * [GnuplotSpectrumSink](#gnuplotspectrumsink)
         * [GnuplotWaterfallSink](#gnuplotwaterfallsink)
         * [GnuplotXYPlotSink](#gnuplotxyplotsink)
+        * [HackRFSink](#hackrfsink)
         * [IQFileSink](#iqfilesink)
         * [JSONSink](#jsonsink)
         * [PortAudioSink](#portaudiosink)
@@ -36,6 +39,7 @@ Generated from LuaRadio `v0.3.0`.
         * [PulseAudioSink](#pulseaudiosink)
         * [RawFileSink](#rawfilesink)
         * [RealFileSink](#realfilesink)
+        * [SoapySDRSink](#soapysdrsink)
         * [WAVFileSink](#wavfilesink)
     * [Filtering](#filtering)
         * [BandpassFilterBlock](#bandpassfilterblock)
@@ -91,7 +95,9 @@ Generated from LuaRadio `v0.3.0`.
         * [FloatToComplexBlock](#floattocomplexblock)
         * [RealToComplexBlock](#realtocomplexblock)
     * [Miscellaneous](#miscellaneous)
+        * [DeinterleaveBlock](#deinterleaveblock)
         * [DelayBlock](#delayblock)
+        * [InterleaveBlock](#interleaveblock)
         * [ThrottleBlock](#throttleblock)
     * [Modulation](#modulation)
         * [SSBModulator](#ssbmodulator)
@@ -557,6 +563,39 @@ local src = radio.NullSource(radio.types.Bit, 2e3)
 ```
 --------------------------------------------------------------------------------
 
+#### PulseAudioSource
+
+Source one or more real-valued signals from the system's audio device with
+PulseAudio. This source requires PulseAudio.
+
+##### `radio.PulseAudioSource(num_channels, rate)`
+
+###### Arguments
+
+* `num_channels` (*int*): Number of channels (e.g. 1 for mono, 2 for stereo)
+* `rate` (*int*): Sample rate in Hz
+
+###### Type Signatures
+
+* ❑➔ `out` *Float32*
+* ❑➔ `out1` *Float32*, `out2` *Float32*
+
+###### Example
+
+``` lua
+-- Source one channel (mono) audio sampled at 44100 Hz
+local src = radio.PulseAudioSource(1, 44100)
+
+-- Source two channel (stereo) audio sampled at 48000 Hz
+local src = radio.PulseAudioSource(2, 48000)
+-- Compose the two channels into a complex-valued signal
+local floattocomplex = radio.FloatToComplex()
+top:connect(src, 'out1', floattocomplex, 'real')
+top:connect(src, 'out2', floattocomplex, 'imag')
+top:connect(floattocomplex, ...)
+```
+--------------------------------------------------------------------------------
+
 #### RawFileSource
 
 Source a signal of the specified data type from a binary file. The raw
@@ -733,6 +772,52 @@ local src = radio.SignalSource('cosine', 100e3, 1e6, {amplitude = 2.5})
 
 -- Source a 1 kHz square wave sampled at 2 MHz, with offset 1.0
 local src = radio.SignalSource('square', 1e3, 2e6, {offset = 1.0})
+```
+--------------------------------------------------------------------------------
+
+#### SoapySDRSource
+
+Source a complex-valued signal from a SoapySDR device. This source requires
+[SoapySDR](https://github.com/pothosware/SoapySDR).
+
+##### `radio.SoapySDRSource(driver, frequency, rate[, options={}])`
+
+###### Arguments
+
+* `driver` (*string\|table*): Driver string or key-value table
+* `frequency` (*number*): Tuning frequency in Hz
+* `rate` (*number*): Sample rate in Hz
+* `options` (*table*): Additional options, specifying:
+    * `channel` (int, default 0)
+    * `bandwidth` (number in Hz)
+    * `autogain` (bool)
+    * `antenna` (string)
+    * `gain` (number in dB, overall gain)
+    * `gains` (table, gain element name to value in dB)
+    * `frequencies` (table, frequency element name to value in Hz)
+    * `settings` (table, string key-value pairs of driver-specific settings)
+
+
+###### Type Signatures
+
+* ❑➔ `out` *ComplexFloat32*
+
+###### Example
+
+``` lua
+-- Source samples from an RTL-SDR at 91.1 MHz sampled at 1 MHz
+local src = radio.SoapySDRSource("driver=rtlsdr", 91.1e6, 1e6)
+
+-- Source samples from an Airspy at 15 MHz sampled at 6 MHz, with 10 dB overall gain
+local src = radio.SoapySDRSource("driver=airspy", 6e6, {gain = 10})
+
+-- Source samples from a LimeSDR at 915 MHz sampled at 10 MHz,
+-- with 20 dB overall gain and 4 MHz baseband bandwidth
+local src = radio.SoapySDRSource("driver=limesdr", 915e6, 10e6, {gain = 20, bandwidth = 4e6})
+
+-- Source samples from a HackRF at 144.390 MHz sampled at 8 MHz,
+-- with 2.5 MHz baseband bandwidth
+local src = radio.SoapySDRSource("driver=hackrf", 144.390e6, 8e6, {bandwidth = 2.5e6})
 ```
 --------------------------------------------------------------------------------
 
@@ -1022,6 +1107,44 @@ top:connect(src2, 'out', snk, 'y')
 ```
 --------------------------------------------------------------------------------
 
+#### HackRFSink
+
+Sink a complex-valued signal to a HackRF One. This sink requires the
+libhackrf library.
+
+##### `radio.HackRFSink(frequency[, options={}])`
+
+###### Arguments
+
+* `frequency` (*number*): Tuning frequency in Hz
+* `options` (*table*): Additional options, specifying:
+    * `vga_gain` (int in dB, default 0 dB, range 0 to 47 dB, 1 dB step)
+    * `bandwidth` (number in Hz, default round down from sample rate)
+    * `rf_amplifier_enable` (bool, default false)
+    * `antenna_power_enable` (bool, default false)
+
+
+###### Type Signatures
+
+* `in` *ComplexFloat32* ➔❑
+
+###### Example
+
+``` lua
+-- Sink samples to 146 MHz
+local snk = radio.HackRFSink(146e6)
+
+-- Sink samples to 433.92 MHz, with 1.75 MHz baseband bandwidth
+local src = radio.HackRFSink(433.92e6, {bandwidth = 1.75e6})
+
+-- Sink samples to 915 MHz, with 22 dB VGA gain
+local src = radio.HackRFSink(915e6, {vga_gain = 22})
+
+-- Sink samples to 144.390 MHz, with antenna power enabled
+local src = radio.HackRFSink(144.390e6, {antenna_power_enable = true})
+```
+--------------------------------------------------------------------------------
+
 #### IQFileSink
 
 Sink a complex-valued signal to a binary "IQ" file. The file format may be
@@ -1090,7 +1213,7 @@ top:connect(src, snk)
 #### PortAudioSink
 
 Sink one or more real-valued signals to the system's audio device with
-PortAudio. This source requires the PortAudio library.
+PortAudio. This sink requires the PortAudio library.
 
 ##### `radio.PortAudioSink(num_channels)`
 
@@ -1145,7 +1268,7 @@ top:connect(src, snk)
 #### PulseAudioSink
 
 Sink one or more real-valued signals to the system's audio device with
-PulseAudio. This source requires PulseAudio.
+PulseAudio. This sink requires PulseAudio.
 
 ##### `radio.PulseAudioSink(num_channels)`
 
@@ -1235,6 +1358,43 @@ local snk = radio.RealFileSink('samples.f32le.real', 'f32le', 1e6, true)
 
 -- Sink little-endian signed 16-bit real samples to stdout
 local snk = radio.RealFileSink(1, 's16le')
+```
+--------------------------------------------------------------------------------
+
+#### SoapySDRSink
+
+Sink a complex-valued signal to a SoapySDR device. This sink requires
+[SoapySDR](https://github.com/pothosware/SoapySDR).
+
+##### `radio.SoapySDRSink(driver, frequency[, options={}])`
+
+###### Arguments
+
+* `driver` (*string\|table*): Driver string or key-value table
+* `frequency` (*number*): Tuning frequency in Hz
+* `options` (*table*): Additional options, specifying:
+    * `channel` (int, default 0)
+    * `bandwidth` (number in Hz)
+    * `autogain` (bool)
+    * `antenna` (string)
+    * `gain` (number in dB, overall gain)
+    * `gains` (table, gain element name to value in dB)
+    * `frequencies` (table, frequency element name to value in Hz)
+    * `settings` (table, string key-value pairs of driver-specific settings)
+
+
+###### Type Signatures
+
+* `in` *ComplexFloat32* ➔❑
+
+###### Example
+
+``` lua
+-- Sink samples to a HackRF at 433.92 MHz
+local src = radio.SoapySDRSink("driver=hackrf", 433.92e6)
+
+-- Sink samples to a LimeSDR at 915 MHz, with 10 dB overall gain and 5 MHz baseband bandwidth
+local src = radio.SoapySDRSink("driver=limesdr", 915e6, {gain = 10, bandwidth = 5e6})
 ```
 --------------------------------------------------------------------------------
 
@@ -1408,13 +1568,16 @@ $$ y[n] = (x * h)[n] $$
 
 $$ y[n] = b_0 x[n] + b_1 x[n-1] + ... + b_N x[n-N] $$
 
-##### `radio.FIRFilterBlock(taps)`
+##### `radio.FIRFilterBlock(taps[, use_fft=true])`
 
 ###### Arguments
 
 * `taps` (*array\|vector*): Real-valued taps specified with a number array or
                            a Float32 vector, or complex-valued taps specified
                            with a ComplexFloat32 vector
+* `use_fft` (*bool*): Use FFT overlap-save convolution. Defaults to true
+                           when acceleration is available and taps length is
+                           greater than 16.
 
 
 ###### Type Signatures
@@ -2532,6 +2695,34 @@ local realtocomplex = radio.RealToComplexBlock()
 
 ### Miscellaneous
 
+#### DeinterleaveBlock
+
+Deinterleave a complex or real valued signal.
+
+$$ y_1[n],\, y_2[n],\, ... = x[Nn+0],\, x[Nn+1],\, ... $$
+
+##### `radio.DeinterleaveBlock([num_channels=2])`
+
+###### Arguments
+
+* `num_channels` (*int*): Number of channels
+
+###### Type Signatures
+
+* `in` *Float32* ➔❑➔ `out1` *Float32*, `out2` *Float32*
+* `in` *ComplexFloat32* ➔❑➔ `out1` *ComplexFloat32*, `out2` *ComplexFloat32*
+
+###### Example
+
+``` lua
+-- Deinterleave two channels
+local deinterleaver = radio.DeinterleaveBlock()
+
+-- Deinterleave four channels
+local deinterleaver = radio.DeinterleaveBlock(4)
+```
+--------------------------------------------------------------------------------
+
 #### DelayBlock
 
 Delay a signal by a fixed number of samples.
@@ -2556,6 +2747,34 @@ $$ y[n] = x[n-d] $$
 ``` lua
 -- Delay by 128 samples
 local delay = radio.DelayBlock(128)
+```
+--------------------------------------------------------------------------------
+
+#### InterleaveBlock
+
+Interleave a complex or real valued signal.
+
+$$ y[n] = \left\{x_1[0],\, x_2[0],\, ...,\, x_N[0],\, x_1[1],\, x_2[1],\, ...,\, x_N[1],\, ...\right\} $$
+
+##### `radio.InterleaveBlock([num_channels=2])`
+
+###### Arguments
+
+* `num_channels` (*int*): Number of channels
+
+###### Type Signatures
+
+* `in1` *Float32*, `in2` *Float32* ➔❑➔ `out` *Float32*
+* `in1` *ComplexFloat32*, `in2` *ComplexFloat32* ➔❑➔ `out` *ComplexFloat32*
+
+###### Example
+
+``` lua
+-- Interleave two channels
+local interleaver = radio.InterleaveBlock()
+
+-- Interleave four channels
+local interleaver = radio.InterleaveBlock(4)
 ```
 --------------------------------------------------------------------------------
 
