docs: simplify prerequisite wording in installation guide

--- a/docs/1.installation.md
+++ b/docs/1.installation.md
@@ -55,7 +55,7 @@ Desktop users should also install the `gnuplot` package for plotting support.
 
 ### Install prerequisites
 
-Install the prerequisite packages (LuaJIT 2.0.4 or greater):
+Install LuaJIT 2.0.4 or greater:
 
 * Arch Linux: `luajit`
 * Ubuntu/Debian: `luajit`, `libluajit-5.1-dev`,`pkg-config`
