docs: improve wording in getting started guide

--- a/docs/2.getting-started.md
+++ b/docs/2.getting-started.md
@@ -26,10 +26,10 @@ filters and multipliers.
 
 LuaRadio blocks have data types associated with their input and output ports.
 For example, a multiplier block may support complex-valued inputs named `in1`
-and `in2`, and a complex-valued output named `out`.  It may also support
-real-valued inputs named `in1` and `in2`, and a real-valued output named `out`.
-Each collection of data types associated with the input and output ports is
-called a type signature.
+and `in2`, with a complex-valued output named `out`.  It may also support
+real-valued inputs named `in1` and `in2`, with a real-valued output named
+`out`.  Each collection of data types associated with the input and output
+ports is called a type signature.
 
 <p align="center">
 <img src="figures/figure_type_signatures_example.png" />
