docs: improve wording in creating blocks guide

--- a/docs/3.creating-blocks.md
+++ b/docs/3.creating-blocks.md
@@ -1052,7 +1052,7 @@ associated with the type.
 
 The type will automatically inherit `.vector()` and `.vector_from_array()`
 static methods, so that vectors of the type can be created by blocks, as well
-as internal serialization methods so that the framework can serialize the type
+as internal serialization methods, so that the framework can serialize the type
 between blocks. See the [LuaRadio Reference
 Manual](0.reference-manual.md#cstructtype) for more inherited methods of
 `CStruct` types.
@@ -1146,7 +1146,7 @@ factory function.
 
 The type will automatically inherit `.vector()` and `.vector_from_array()`
 static methods, so that vectors of the type can be created by blocks, as well
-as internal serialization methods so that the framework can serialize the type
+as internal serialization methods, so that the framework can serialize the type
 between blocks.  In addition, the type will inherit the `.to_json()` method to
 form a JSON representation, enabling the type to be used with the
 [`JSONSink`](0.reference-manual.md#jsonsink). See the [LuaRadio Reference
