docs: improve wording in comparison to gnuradio document

--- a/docs/6.comparison-gnuradio.md
+++ b/docs/6.comparison-gnuradio.md
@@ -181,6 +181,6 @@ more mature codebase.
 LuaRadio does not have a graphical flow graph editing tool, like the GNU Radio
 Companion (GRC).
 
-GNU Radio currently has some more efficient signal processing blocks, like FFT
-filters, polyphase filters, or filters with integrated translation and
-decimation, but these can be added to LuaRadio as needed.
+GNU Radio currently has some more efficient signal processing blocks, like
+polyphase filters, or filters with integrated translation and decimation, but
+these can be added to LuaRadio as needed.
