blocks/sources/zero: rename NullSource to ZeroSource
but leave alias to NullSource in radio namespace for compatibility.

--- a/docs/3.creating-blocks.md
+++ b/docs/3.creating-blocks.md
@@ -677,7 +677,7 @@ For example, to benchmark the `MultiplyBlock` we built above:
 ``` lua
 local radio = require('radio')
 
-local source = radio.NullSource(radio.types.ComplexFloat32, 0)
+local source = radio.ZeroSource(radio.types.ComplexFloat32, 0)
 local multiply = MultiplyBlock()
 local sink = radio.BenchmarkSink()
 local top = radio.CompositeBlock()
@@ -689,15 +689,15 @@ top:run()
 ```
 
 In this flow graph, the multiply block inputs are fed by a
-[`NullSource`](0.reference-manual.md#nullsource), which sources zero-valued
+[`ZeroSource`](0.reference-manual.md#zerosource), which sources zero-valued
 samples, and the multiply block output is connected to a `BenchmarkSink`, which
 counts received samples over time. The `BenchmarkSink` periodically reports the
 average rate of samples consumed.
 
 The `BenchmarkSink` is technically benchmarking the entire flow graph,
-including the `NullSource` and the framework's overhead of serializing samples
+including the `ZeroSource` and the framework's overhead of serializing samples
 between blocks. However, in this case, the `MultiplyBlock` is the computational
-limiting factor by several orders of magnitude, so the overhead of `NullSource`
+limiting factor by several orders of magnitude, so the overhead of `ZeroSource`
 and the framework is relatively insignificant, and the resulting rate
 corresponds roughly to that of the `MultiplyBlock`. Other situations may
 require a different strategy for benchmarking (see caveats below).
@@ -724,7 +724,7 @@ larger flow graph.  Nonetheless, the `BenchmarkSink` gives a good idea of
 whether or not a block will be a real-time bottleneck to an upstream block of a
 particular rate, e.g. an SDR source at 2 MS/s.
 
-It's also important to point out that while the `NullSource` is applicable to
+It's also important to point out that while the `ZeroSource` is applicable to
 many signal processing blocks, which will perform their computation regardless
 of if the samples are all zero-valued, it might not be the appropriate stimulus
 for blocks that have value-dependent code paths. In those cases, a random
