docs: update supported hardware document

--- a/docs/7.supported-hardware.md
+++ b/docs/7.supported-hardware.md
@@ -12,19 +12,13 @@ high speed interfaces.
 * [Airspy R2 and Mini](http://airspy.com/) with [`AirspySource`](0.reference-manual.md#airspysource) via [libairspy](https://github.com/airspy/host)
 * [HackRF One](https://greatscottgadgets.com/hackrf/) with [`HackRFSource`](0.reference-manual.md#hackrfsource) via [libhackrf](https://github.com/mossmann/hackrf)
 * [SDRplay RSP](http://sdrplay.com/) with [`SDRplaySource`](0.reference-manual.md#sdrplaysource) via [libmirsdrapi-rsp](http://sdrplay.com/linux.html)
-
-Coming soon:
-
-* [BladeRF](http://nuand.com/) with [`BladeRFSource`](https://github.com/vsergeev/luaradio/issues/19) via [libbladerf](https://github.com/Nuand/bladeRF)
+* [USRP](https://www.ettus.com/) with [`UHDSource`](0.reference-manual.md#uhdsource) via [libuhd](https://github.com/EttusResearch/uhd)
 
 ### Sinks
 
 * [SoapySDR](https://github.com/pothosware/SoapySDR/wiki) with [`SoapySDRSink`](0.reference-manual.md#soapysdrsink) via [libSoapySDR](https://github.com/pothosware/SoapySDR)
 * [HackRF One](https://greatscottgadgets.com/hackrf/) with [`HackRFSink`](0.reference-manual.md#hackrfsink) via [libhackrf](https://github.com/mossmann/hackrf)
-
-Coming soon:
-
-* [BladeRF](http://nuand.com/) with `BladeRFSink` via [libbladerf](https://github.com/Nuand/bladeRF)
+* [USRP](https://www.ettus.com/) with [`UHDSink`](0.reference-manual.md#uhdsink) via [libuhd](https://github.com/EttusResearch/uhd)
 
 ## Sound card SDR Sources and Sinks
 
@@ -45,8 +39,8 @@ demodulated audio signals through sound card mono channels.
 ## File Sources and Sinks
 
 File sources and sinks source and sink samples with ordinary files. They can
-indirectly support SDR hardware by reading or writing a named pipe, linked to
-an external utility that interfaces with the SDR hardware.
+indirectly support SDR hardware by reading/writing a named pipe shared with an
+external utility that interfaces with the SDR hardware.
 
 ### Sources
 
