docs: add mention of JSONSource to object type section in creating blocks

--- a/docs/3.creating-blocks.md
+++ b/docs/3.creating-blocks.md
@@ -1149,9 +1149,10 @@ static methods, so that vectors of the type can be created by blocks, as well
 as internal serialization methods, so that the framework can serialize the type
 between blocks.  In addition, the type will inherit the `.to_json()` method to
 form a JSON representation, enabling the type to be used with the
-[`JSONSink`](0.reference-manual.md#jsonsink). See the [LuaRadio Reference
-Manual](0.reference-manual.md#objecttype) for more inherited methods of
-`Object` types.
+[`JSONSource`](0.reference-manual.md#jsonsource) and
+[`JSONSink`](0.reference-manual.md#jsonsink). See the
+[LuaRadio Reference Manual](0.reference-manual.md#objecttype) for more
+inherited methods of `Object` types.
 
 After an `Object` data type is created, its `.new()` constructor must be
 implemented. Additional methods can be defined directly on the data type class.
