docs: add sections to development tips in creating blocks

--- a/docs/3.creating-blocks.md
+++ b/docs/3.creating-blocks.md
@@ -1308,12 +1308,16 @@ if a future version of LuaJIT implements the Lua 5.3 language, which has a
 
 ## Development Tips
 
+#### REPL
+
 For prototyping with Lua, the LuaJIT REPL is a bit too minimalist to be
 productive. As in the original Lua 5.1 REPL, it requires preceding expressions
 with "=" to print their value, and it doesn't support dumping tables. I suggest
 using Torch's [trepl](https://github.com/torch/trepl) for prototyping,
 available in [LuaRocks](https://luarocks.org/modules/vsergeev/trepl-torchless).
 It supports table dumping, pretty printing, tab completion, and line history.
+
+#### Prototyping
 
 For some blocks, it may be more productive to prototype signal processing
 routines in Python, with libraries like [numpy](http://www.numpy.org/),
