docs: add mention of lua-repl to development tips in creating blocks

--- a/docs/3.creating-blocks.md
+++ b/docs/3.creating-blocks.md
@@ -1317,6 +1317,8 @@ using Torch's [trepl](https://github.com/torch/trepl) for prototyping,
 available in [LuaRocks](https://luarocks.org/modules/vsergeev/trepl-torchless).
 It supports table dumping, pretty printing, tab completion, and line history.
 
+Another alternative is [lua-repl](https://github.com/hoelzro/lua-repl).
+
 #### Prototyping
 
 For some blocks, it may be more productive to prototype signal processing
