docs: add ffi tips to development tips in creating blocks

--- a/docs/3.creating-blocks.md
+++ b/docs/3.creating-blocks.md
@@ -1308,6 +1308,14 @@ if a future version of LuaJIT implements the Lua 5.3 language, which has a
 
 ## Development Tips
 
+#### FFI
+
+When manipulating samples with the LuaJIT FFI, use `ffi.copy()` instead of C
+`memcpy()` and `ffi.fill()` instead of C `memset()` for better performance.
+Avoid calling `ffi.typeof()` or `ffi.new()` repeatedly in the Block's
+`process()` critical path, and instead call them once in `initialize()` (e.g.
+when initializing C types, allocating memory, or allocating sample vectors).
+
 #### REPL
 
 For prototyping with Lua, the LuaJIT REPL is a bit too minimalist to be
