docs: simplify test invocation in creating blocks

--- a/docs/3.creating-blocks.md
+++ b/docs/3.creating-blocks.md
@@ -648,10 +648,10 @@ jigs.TestBlock(MultiplyBlock, {
 }, {epsilon = 1e-6})
 ```
 
-This test can then be run with `busted`:
+This test can then be run with `busted` from the LuaRadio repository:
 
 ```
-$ busted --lua=luajit --no-auto-insulate --lpath="./?/init.lua" multiply_test.lua
+$ busted multiply_test.lua
 ●
 1 success / 0 failures / 0 errors / 0 pending : 0.013749 seconds
 $
